--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@pfo/pf-pweb-react",
   "version": "1.0.0",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@pfo/pf-pweb-i18n": "^1.0.0"
+  },
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack --mode=production"
